[gd_scene load_steps=9 format=3 uid="uid://bersa8l0ueg37"]

[ext_resource type="Script" uid="uid://dsrtjlb8sqmm5" path="res://src/enemies/cannon.gd" id="1_0eypk"]
[ext_resource type="Texture2D" uid="uid://cuce11m0j3lf1" path="res://assets/layers.png" id="1_bajk2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jp6c6"]
atlas = ExtResource("1_bajk2")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu6fi"]
atlas = ExtResource("1_bajk2")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iel6a"]
atlas = ExtResource("1_bajk2")
region = Rect2(0, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8p4d7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp6c6")
}],
"loop": true,
"name": &"shot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu6fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iel6a")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3yxfk"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7oxf"]
size = Vector2(12, 3)

[node name="Cannon" type="CharacterBody2D" groups=["stompable"]]
collision_layer = 2
collision_mask = 21
script = ExtResource("1_0eypk")

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8p4d7")
animation = &"walk"

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_3yxfk")

[node name="ShooterArea2d" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShooterArea2d"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_s7oxf")

[node name="PrepareShotTimer" type="Timer" parent="."]
wait_time = 2.6
autostart = true

[node name="BeforeShotTimer" type="Timer" parent="."]

[connection signal="body_entered" from="ShooterArea2d" to="." method="_on_shooter_area_2d_body_entered"]
[connection signal="timeout" from="PrepareShotTimer" to="." method="_on_prepare_shot_timer_timeout"]
[connection signal="timeout" from="BeforeShotTimer" to="." method="_on_before_shot_timer_timeout"]
